kubernetes/admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: tomato
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      name: admin
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: syedmehfooz/tomato-admin:v1.52
          ports:
            - containerPort: 5174
          
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: tomato
spec:
  selector:
    app: admin
  ports:
    - port: 5174
      targetPort: 5174
      protocol: TCP
