kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: tomato
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: syedmehfooz/tomato-backend:v1.0
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: tomato
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      nodePort: 31002
