kubernetes/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: tomato
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: syedmehfooz/tomato-frontend:v1.46
          ports:
            - containerPort: 5173
          
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: tomato
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 5173
      targetPort: 5173
      protocol: TCP
      nodePort: 31003
